--- a/html-css-cheatsheet-starting/index.html
+++ b/html-css-cheatsheet-starting/index.html
@@ -5,7 +5,7 @@
     <title>Cheat Sheet Challenge</title>
   </head>
   <body>
-    <h1>Bacon's HTML & CSS Cheatsheet</h1>
+    <h1>GB's HTML & CSS Cheatsheet</h1>
   </body>
   <footer></footer>
 </html>
